2005-01-28  Per Bothner  <per@bothner.com>

	* Makefile.am (patch-source-list): Sort the result, for stability.

2005-01-26  Per Bothner  <per@bothner.com>

	* kawa/standard/with_compile_options.java (scanForm):  Put back a
	statement that should not have been deleted in 01-22 change.

2005-01-25  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java: Update Interpreter -> Language.
	* kawa/lang/Eval.java: Likewise.

2005-01-22  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (scanBody): New parameter makeList, to
	specify whether we return a list or push result on formStack.
	(rewrite_body): Fix scanBody call.
	(makeBody): Revert 01-12 change because it breaks top-level.
	* kawa/standard/begin.java (scanForm):  Use tr.scanForm option to
	create a list, and return a scanned for for later rewrite.
	Alternative fix to problem fixed by 01-12 change.
	* kawa/lang/Eval.java (evalBody): Update scanForm call.
	* kawa/standard/with_compile_options.java (scanForm): Update calls to
	tr.scanForm. Let Translator create list rather than doing it here.

	* kawa/standard/Scheme.java (scheme_counter): Remove static field.
	(getNewEnvironment): Use inherited env_counter instead.

	* configure.in: Make AC_PROG_LIBTOOL unconditional, since needed
	for bin/cgi-servlet.

2005-01-18  C. Brian Jones  <cbj@gnu.org>

	* configure.in: Added BYTECODE_VERSION.
	[Per: changed to be the same as VERSION]
	* Makefile.am: Added targets for bytecode.jar, install-bytecode-jar.
	* gnu/bytecode/jar-manifest: New file.

2005-01-16  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (makeDeclInModule): Clear the value
	of the imported decl if it isn't constant.

2005-01-12  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (namespaceResolve(String)): Don't look
	for class matching prefix here.
	(namespaceResolve(String,boolean)): If JAVA2, look for class matching
	prefix without initializing the class.
