@@ -1,3 +1,9 @@
+2005-01-29  Per Bothner  <per@bothner.com>
+
+	* kawa/lang/Quote.java: Rename LispInterpreter -> LispLanguage.
+	* kawa/lang/Translator.java: Likewise.
+	* kawa/standard/Scheme.java: Likewise.  Extend LispLanguage.
+
 2005-01-28  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (patch-source-list): Sort the result, for stability.
